--- a/Proyecto/css/galeria.css
+++ b/Proyecto/css/galeria.css
@@ -7,16 +7,19 @@ body
 {
     min-height: 100vh;
     max-width: 100vw;
+    background: url(..//img/asanoha-400px.png) no-repeat;
+    background-size: cover;
 }
 header
 {
     height: 20vh;
-    background-color: #ffffff;
+    background: rgba(156, 156, 156, 0.4);
     display: flex;
     border-bottom: 2px solid #F21D2F;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .logo
@@ -25,29 +28,31 @@ header
     padding: 0;
 }
 
+.menuDesplegable
+{
+    display: none;
+    cursor: pointer;
+}
+
 .navegacion
 {
     display: flex;
-    justify-content: space-evenly;
+    justify-items: flex-start;
     gap: 2em;
     padding: 0.8em;
     list-style-type: none;
     font-weight: bold;
     font-size: larger;
     color: #F21D2F;
-    padding: 2em; 
+    padding: 1em; 
     font-family: "Kaushan Script", cursive;
+    position: relative;
 }
 
 li:hover
 {
     text-decoration: underline; 
     animation: moverTexto 1s;
-}
-
-.animacion:hover
-{
-    
 }
 
 @keyframes moverTexto
@@ -85,36 +90,92 @@ a
 main
 {
     height: 70vh;
-    background: url(..//img/asanoha-400px.png) no-repeat;
-    background-size: cover;
 }
+
+
 
 footer
 {
+    position: relative;
     height: 15vh;
-    background-color: #F21D2F;
+    background: rgba(156, 156, 156, 0.4);
+    font-family: "Quicksand", sans-serif;
+    font-weight: 500;
+    padding: 3.5em 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /*background: rgba(242, 29, 47, 0.6);*/
 }
+
+p
+{
+    text-align: center;
+}
+
+.textoSuperior
+{
+    font-size: larger;
+}
+
 
 @media (max-width: 768px) 
 {
-    header 
+header 
     {
         height: 15vh;
+        align-items: center;
     }
 
     .logo 
     {
         height: 15vh;
+        margin-bottom: 1em;
     }
 
-    main 
+    .menuDesplegable 
     {
-        height: 50vh;
-        background-image: url(..//img/asanoha-400px.png);
+        display: block;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+
+    .navegacion
+    {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: rgba(94, 94, 94, 0.4);
+        width: 40vw;
+        z-index: 999;
+        flex-direction: column;
+    }
+
+    .navegacion li 
+    {
+        margin: 0.3em;
+    }
+
+    .menuDesplegable:focus + #menu .navegacion 
+    {
+        display: flex;
     }
 
     footer 
     {
         height: 10vh;
+    }
+
+    p
+    {
+        font-size: small;
+        text-align: center;
+    }
+
+    .textoSuperior
+    {
+        font-size: medium;
     }
 }
