--- a/Proyecto/css/galeria.css
+++ b/Proyecto/css/galeria.css
@@ -1,40 +1,44 @@
-*
+* 
 {
     margin: 0;
     box-sizing: border-box;
 }
-body
+
+body 
 {
     min-height: 100vh;
     max-width: 100vw;
-    background: url(..//img/asanoha-400px.png) no-repeat;
-    background-size: cover;
+    background: url(..//img/background-logo/asanoha-400px.png) repeat;
 }
-header
+
+header 
 {
     height: 20vh;
-    background: rgba(156, 156, 156, 0.4);
+    background: rgb(210, 210, 210);
     display: flex;
     border-bottom: 2px solid #F21D2F;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    position: sticky;
+    top: 0;
+    transition: top 0.3s;
+    z-index: 1000;
 }
 
-.logo
+.logo 
 {
     height: 18vh;
     padding: 0;
 }
 
-.menuDesplegable
+.menuDesplegable 
 {
     display: none;
     cursor: pointer;
 }
 
-.navegacion
+.navegacion 
 {
     display: flex;
     justify-items: flex-start;
@@ -44,44 +48,46 @@ header
     font-weight: bold;
     font-size: larger;
     color: #F21D2F;
-    padding: 1em; 
+    padding: 1em;
     font-family: "Kaushan Script", cursive;
     position: relative;
 }
 
-li:hover
+li:hover 
 {
-    text-decoration: underline; 
+    text-decoration: underline;
     animation: moverTexto 1s;
 }
 
-@keyframes moverTexto
+@keyframes moverTexto 
 {
-    0%
+    0% 
     {
         transform: translateX(0);
     }
-    50%
+
+    50% 
     {
         transform: translateX(10px);
     }
-    100%
+
+    100% 
     {
         transform: translateX(0);
     }
 }
 
-li
+li 
 {
     display: inline-block;
     border-right: 0.2em #000000 solid;
     padding: 0.5em;
-    margin: 3em;
+    margin: 1em;
 }
 
-a
+a 
 {
-    padding: 10px 20px; 
+    padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
     color: #F21D2F;
@@ -89,12 +95,52 @@ a
 
 main
 {
-    height: 70vh;
+    display: flex;
+    flex-direction: column;
 }
 
+.titulo
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 2em;
+    font-family: "Kaushan Script", cursive;
+    border-bottom: 2px solid #F21D2F;
+    width: 10em;
+    margin: 1em auto;
+}
 
+.galeria
+{  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3em;
+    justify-items: center;
+    width: 100%;
+    max-width: 95em;
+    margin: auto;
+    background: rgba(156, 156, 156, 0.4);
+    padding: 4em 0;
+}
 
-footer
+.galeria img
+{
+    width: 30vw;
+}
+
+.foto
+{
+    filter: grayscale(90%);
+}
+
+.foto:hover
+{
+    filter: grayscale(0) saturate(120%);
+    transform: scale(1.4);
+    z-index: 1;
+}
+
+footer 
 {
     position: relative;
     height: 15vh;
@@ -106,25 +152,55 @@ footer
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /*background: rgba(242, 29, 47, 0.6);*/
+    margin-top: 5em;
+    border-top: 2px solid #F21D2F;
 }
 
-p
+footer > p 
 {
     text-align: center;
 }
 
-.textoSuperior
+.textoSuperior 
 {
     font-size: larger;
 }
 
-
-@media (max-width: 768px) 
+@media only screen and (min-width: 768px) and (max-width:1024)
 {
-header 
+    header
+    {
+        height: auto;
+        align-items: center;
+    }
+
+    .logo
     {
         height: 15vh;
+    }
+
+    .navegacion
+    {
+        justify-content: center;
+    }
+
+    li
+    {
+        display: block;
+        margin: 0.5em 0;
+    }
+
+    footer
+    {
+        padding: 2em;
+    }
+}
+
+@media only screen and (max-width: 768px) 
+{
+    header 
+    {
+        height: auto;
         align-items: center;
     }
 
@@ -141,16 +217,23 @@ header
         cursor: pointer;
     }
 
-    .navegacion
+    .navegacion 
     {
         display: none;
         position: absolute;
         top: 100%;
         left: 0;
-        background-color: rgba(94, 94, 94, 0.4);
-        width: 40vw;
+        background-color: rgba(242, 29, 47, 0.9);
+        width: 50vw;
         z-index: 999;
         flex-direction: column;
+        justify-content: center;
+        color: white;
+    }
+
+    a 
+    {
+        color: rgb(0, 0, 0);
     }
 
     .navegacion li 
@@ -158,24 +241,48 @@ header
         margin: 0.3em;
     }
 
-    .menuDesplegable:focus + #menu .navegacion 
+    .menuDesplegable:focus + .menu .navegacion 
     {
         display: flex;
     }
 
+    main
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .titulo 
+    {
+        display: flex;
+        justify-content: center;
+        font-family: "Kaushan Script", cursive;
+        border-bottom: 2px solid #F21D2F;
+        width: 10em;
+        margin: 1em auto;
+    }
+
+    .galeria
+    {  
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 3em;
+        width: 80%;
+        margin: 1em auto;
+        background: rgba(156, 156, 156, 0.4);
+        padding: 4em 0;
+    }
+
+    .galeria img
+    {
+        width: 80%;
+    }
+
     footer 
     {
-        height: 10vh;
-    }
-
-    p
-    {
-        font-size: small;
-        text-align: center;
-    }
-
-    .textoSuperior
-    {
-        font-size: medium;
+        padding: 2em;
     }
 }
