--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ h1{
 
 }
 .card3{
-    background-image: url(../img/index-img/galeria.png);
+    background-image: url(..//img/index-img/galeria.png);
 }
 h5{
   color: #F21D2F;
